ingress/ingress-staging-drupal-pilot-cer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-pilot-cer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/app-root: /en
spec:
  tls:
  - hosts:
    - drupal-pilot.cer.alpha.experimentation.ca
    secretName: drupal-pilot-cer-tls-secret-staging
  rules:
  - host: drupal-pilot.cer.alpha.experimentation.ca
    http:
      paths:
      - backend:
          serviceName: drupal-nginx
          servicePort: 80
        path: /
